@@ -26,6 +26,7 @@ $t->get_ok('/')
   ->header_like('Content-Security-Policy', qr!default-src 'self';!)
   ->header_like('Content-Security-Policy', qr!media-src 'none';!)
   ->header_like('Content-Security-Policy', qr!object-src 'self';!)
+  ->header_is('X-XSS-Protection', '1; mode=block')
   ;
 
 done_testing;
